LPS-112937 - web content display portlet header overlaps over the first line of the content, make the position relative to stop this overlap

--- a/modules/apps/journal/journal-content-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/journal/journal-content-web/src/main/resources/META-INF/resources/css/main.scss
@@ -80,7 +80,7 @@
 
 	&.portlet-barebone .portlet .portlet-header {
 		margin-bottom: 0;
-		position: absolute;
+		position: relative;
 		right: 2px;
 		top: 2px;
 		z-index: 1;
